_includes/academy.css
/* ... */
button {
    margin-top: .15em;
}
button:focus,
button:active {
    box-shadow: 1px 1px .2em #333;
}
button.error {
    color: #fff;
    text-shadow: -1px 0 0 #333;
    background-color: #b00;
}
.table img {
    position: absolute;
    bottom: 0;
    top: 0;
    max-width: inherit;
    object-fit: cover;
    right: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
}
.column.nav-container,
.column.content {
    display: block;
    padding-top: 0;
}
.nav-container {
    z-index: 9;
    width: 16em;
    float: left;
    vertical-align: top;
}
.nav {
    width: 100%;
    margin-top: .8em;
    float: right;
    clear: both;
    white-space: nowrap;
    background-color: #fff;
}
.nav + .nav {
    margin-top: 0;
    border-top: 4px solid #ededed;
}
.nav,
.nav ol {
    counter-reset: item;
    padding: 0;
}
.nav li {
    display: block;
}
.nav > li {
    counter-reset: subitem;
}
.nav time {
    margin: 0;
    margin-right: .4em;
    float: left;
    line-height: 1.3;
    font-weight: normal;
}
.nav label {
    display: block;
    position: relative;
    padding: .9em 1.2em;
    color: currentcolor;
    font-weight: bold;
    cursor: pointer;
}
.nav label[disabled] {
    color: #aaa;
    cursor: default;
}
.nav li label:before {
    content: counters(item, ".") ".";
    counter-increment: item;
    margin-left: .4em;
    float: right;
    font-weight: normal;
}
.nav li li a:before {
    content: counters(subitem, ".") ". ";
    font-weight: normal;
    counter-increment: subitem;
}
.nav div,
.nav a {
    overflow: hidden;
    text-overflow: ellipsis;
}
.nav a {
    display: block;
    color: inherit;
    text-decoration: none;
    outline: none;
}
.nav .active,
.nav a:hover,
.nav a:focus,
.nav label[onclick]:hover,
.nav label[onclick]:focus,
.nav-container .selected {
    color: #fff;
    background-color: #1e90ff;
    border-color: #1e90ff;
}
.nav label[onclick]:hover time,
.nav label[onclick]:focus time,
.nav-container .selected time {
    color: #fff;
}
.nav > li {
    border-top: 2px solid #ededed;
}
.nav > li:first-child {
    border-top: 0;
}
.nav ol {
    display: none;
    box-suppress: discard;
    margin-bottom: .4em;
}
.nav .expand ~ ol {
    display: block;
}
.nav ol a {
    padding-top: .4em;
    padding-bottom: .4em;
    padding-right: 2.5em;
}
.comment-container {
    width: calc(100% - 16.8em);
}
.comment {
    margin-right: 2.1em;
    margin-left: 2.1em;
}
.medium.comment {
    max-width: 100%;
}
.bg {
    position: fixed;
    z-index: -1;
    top: 0;
    right: 0;
    left: 0;
    bottom: 0;
    background: #88828c url(/assets/academy.jpg) center 3.7em no-repeat;
    background-size: cover;
}
.items .cover {
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
}
.items .cover h3 {
    overflow: hidden;
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    padding: 1em;
    margin: 0;
    color: initial;
    text-align: right;
    text-overflow: ellipsis;
    text-shadow: 1px 1px 0 #fff;
    background-color: rgba(255,255,255,.8);
}
.form {
    margin: 6% 2.1em;
}
.form button.spin.spin.spin:before {
    margin: -.12em;
    margin-left: .3em;
}
.qa ol,
.qa input:checked ~ ol {
    padding: 0;
    margin: auto;
}
.qa > ol {
    margin: 1em auto;
}
.qa ol ol {
    display: none;
    position: relative;
    background-color: #fff;
    border-top: 1px solid #ddd;
    box-shadow: 1px 2px 1px #aaa;
}
.qa input:checked ~ ol {
    display: block;
}
.qa li {
    position: relative;
    flex: 1;
    list-style-type: none;
}
.qa a {
    visibility: hidden;
    margin-right: .4em;
    float: left;
}
.qa input {
    display: none;
}
.qa label {
    display: block;
    position: relative;
    padding: 1.2em 1.6em;
    padding-left: 1em;
    line-height: 1.4;
    border-bottom: 1px solid #ddd;
    box-sizing: border-box;
    cursor: pointer;
}
.qa label:before {
    content: "";
    display: inline-block;
    padding: .4em;
    margin: .2em 0 .2em .5em;
    vertical-align: middle;
    background-color: #fff;
    border: .2em solid #f58e84;
    border-radius: 2px;
}
.qa ol ol label {
    padding-right: 2.85em;
}
.qa ol li:last-child label {
    border-bottom: 0;
}
.qa ol ol li:not(:last-child) label {
    border-color: #eee;
}
.qa label:not([disabled]):hover {
    background-color: #fff;
}
.qa label:not([disabled]):hover:before {
    border-color: #4d90fe;
}
.qa label[disabled] {
    opacity: .4;
    pointer-events: none;
}
.qa label[disabled]:before {
    background-color: transparent;
    border-color: #ccc;
}
.qa input:checked ~ label {
    font-weight: bold;
    background-color: #fff;
    border-color: transparent;
    box-shadow: 0 -1px 0 #eee,
                1px 2px 1px #aaa;
}
.qa input:checked ~ label:before {
    background-color: #4d90fe;
    border-color: #4d90fe;
}
.qa input:checked ~ label:after {
    content: "\2716";
    position: absolute;
    top: 1.65em;
    right: 2.15em;
    color: transparent;
    font-weight: normal;
    font-size: 86%;
    transition: color .35s cubic-bezier(.2,1,.4,1);
}
.qa input:checked ~ label:hover,
.qa ol ol label:not([disabled]):hover {
    background-color: #f9f9f9;
}
.qa input:checked ~ label:hover:after {
    color: #fff;
    transition: color .15s cubic-bezier(.2,1,.4,1);
}
.dialog {
    position: relative;
    z-index: 1;
    height: 15em;
    padding: 1em;
    text-align: center;
    background-color: #fff;
    border-radius: 3px;
    box-shadow: 0 -1px 0 #eee, 1px 2px 2px #aaa;
}
.dialog.final {
    background-color: transparent;
    box-shadow: none;
}
.dialog.dialog.dialog ~ * {
    display: none;
}
.dialog .table {
    height: 100%;
}
.dialog .cel {
    display: table-cell;
    vertical-align: middle;
}
.dialog .close {
    position: absolute;
    left: 0;
    top: 0;
    width: 1.6em;
    height: 1.6em;
    font-size: 170%;
    line-height: 1.6;
    cursor: pointer;
}
.dialog .close:before {
    content: "\01F7A9";
}
/* ... */

